[package]
name = "surrealdb_node"
version = "0.4.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cargo-lock = "9.0.0"
dmp = "0.2.0"
napi = { version = "2", features = ["async", "serde-json"] }
napi-derive = "2"
once_cell = "1.19.0"
serde = "1.0.188"
serde_json = "1.0.105"
surrealdb = { git = "https://github.com/surrealdb/surrealdb.git", tag = "v2.0.0-alpha.3", features = [
    "kv-surrealkv",
    "kv-mem",
] }
uuid = "1.8.0"

[build-dependencies]
napi-build = "2.0.1"

[features]
rocksdb = ["surrealdb/kv-rocksdb"]

[profile.release]
lto = true

[target.x86_64-pc-windows-msvc.dependencies]
surrealdb = { git = "https://github.com/surrealdb/surrealdb.git", tag = "v2.0.0-alpha.3", features = [
    "kv-surrealkv",
    "kv-mem",
    "kv-rocksdb",
] }
[target.x86_64-unknown-linux-gnu.dependencies]
surrealdb = { git = "https://github.com/surrealdb/surrealdb.git", tag = "v2.0.0-alpha.3", features = [
    "kv-surrealkv",
    "kv-mem",
    "kv-rocksdb",
] }
[target.aarch64-linux-android.dependencies]
surrealdb = { git = "https://github.com/surrealdb/surrealdb.git", tag = "v2.0.0-alpha.3", features = [
    "kv-surrealkv",
    "kv-mem",
    "kv-rocksdb",
] }
[target.armv7-linux-androideabi.dependencies]
surrealdb = { git = "https://github.com/surrealdb/surrealdb.git", tag = "v2.0.0-alpha.3", features = [
    "kv-surrealkv",
    "kv-mem",
    "kv-rocksdb",
] }
# [target.aarch64-apple-darwin.dependencies]
# surrealdb = { version = "1.0.0-beta.10", features = ["kv-mem", "kv-rocksdb"] }
