[package]
name = "surrealdb_node"
version = "0.4.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
surrealdb = { version = "2.1.1", default-features = false, features = ["kv-surrealkv", "kv-mem"] }
napi = { version = "2", features = ["async", "serde-json"] }
napi-derive = "2"
serde = "1.0.188"
serde_json = "1.0.115"
channel = { version = "2.3.1", package = "async-channel" }
uuid = "1.8.0"

[build-dependencies]
napi-build = "2.0.1"
cargo-lock = "9.0.0"

[features]
rocksdb = ["surrealdb/kv-rocksdb"]

[profile.release]
lto = true
